hello-world/01_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-world
  labels:
    name: hello-world
