hello-world/03_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: hello-world
spec:
  selector:
    app: hello-world
  ports:
  - port: 5678
    targetPort: 80
    protocol: TCP
  type: ClusterIP
